applications/openeuler-repo-user-cn-north4/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: repo-user
  name: repo-user
