applications/openeuler-repo-user-cn-north4/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: openeuler-cn4-repo-ingress
  namespace: repo-user
spec:
  rules:
  - host: user-repo.openeuler.openatom.cn
    http:
      paths:
      - backend:
          serviceName: openeuler-nginx-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - user-repo.openeuler.openatom.cn
    secretName: openeuler-repo-openatom-tls
